kube/dendrite.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: block-metrics
spec:
  replacePathRegex:
    regex: ^/metrics
    replacement: /
