kube/external-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassmysql
  namespace: default
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
---
kind: Endpoints
apiVersion: v1
metadata:
  name: hassmysql
  namespace: default
subsets:
  - addresses:
      - ip: 10.10.10.107
    ports:
      - port: 3306
        name: mysql
        protocol: TCP
