kube/adguard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-tcp-route
  namespace: default
spec:
  entryPoints:
    - dnstcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: adguard-adguard-home-dns-tcp
          port: 53
