kube/bitwarden.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-admin
  namespace: default
spec:
  routes:
    - match: Host(`bw.vanderpot.net`) && PathPrefix(`/admin`)
      kind: Rule
      services:
        - name: vaultwarden
      middlewares:
        - name: auth
          namespace: default
      priority: 100
