kube/external.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hassapps
  namespace: default
spec:
  routes:
    - match: Host(`old.food.vanderpot.net`)
      kind: Rule
      services:
        - name: homeassistant
          port: 9002
    - match: Host(`pve.vanderpot.net`)
      kind: Rule
      services:
        - name: pve
          port: 8006
          scheme: https
      middlewares:
        - name: secured
          namespace: default
    - match: Host(`old.hass.vanderpot.net`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
      middlewares:
        - name: secured
          namespace: default
    - match: Host(`grafana.vanderpot.net`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8199
      middlewares:
        - name: secured
          namespace: default
    - match: Host(`adsb.vanderpot.net`)
      kind: Rule
      services:
        - name: piaware
          port: 80
      middlewares:
        - name: secured
          namespace: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: udm
  namespace: default
spec:
  routes:
    - match: Host(`unifi.vanderpot.net`)
      kind: Rule
      services:
        - name: udmpro
          port: 443
          scheme: https
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: default
spec:
  externalName: 10.10.10.107
  type: ExternalName
  ports:
    - protocol: TCP
      port: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: udmpro
  namespace: default
spec:
  externalName: 10.10.10.1
  type: ExternalName
  ports:
    - protocol: TCP
      port: 443
      name: https
---
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: default
spec:
  externalName: 10.10.10.99
  type: ExternalName
  ports:
    - protocol: TCP
      port: 8006
      name: https
---
apiVersion: v1
kind: Service
metadata:
  name: piaware
  namespace: default
spec:
  externalName: 10.10.10.171
  type: ExternalName
  ports:
    - protocol: TCP
      port: 80
      name: http


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  routes:
    - match: Host(`traefik.vanderpot.net`) # Hostname to match
      kind: Rule
      services: # Service to redirect requests to
        - name: api@internal # Special service created by Traefik pod
          kind: TraefikService
      middlewares:
        - name: secured
          namespace: default
  tls:
    secretName: vanderpot-net-tls
