kube/homeassistant-externalname.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant.route
  namespace: default
spec:
  entryPoints:
    - foo
  routes:
    - match: Host(`hass.vanderpot.net`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
    - match: Host(`sso.vanderpot.net`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
    - match: Host(`nginx.vanderpot.net`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: default
spec:
  externalName: 10.10.10.107
  type: ExternalName
