kube/lancache.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cache
  namespace: default
spec:
  routes:
    - match: HostRegexp(`{host:.+}`) && !(HostRegexp`{subdomain:.+}.vanderpot.net`, `{subdomain:.+}.cookwherever.com`)
      kind: Rule
      services:
        - name: lancache
          port: 80
      middlewares:
        - name: cache-ipwhitelist
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cache-ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 10.10.10.8/29
      - 10.10.10.16/28
      - 10.10.10.32/27
      - 10.10.10.64/26
      - 10.10.10.128/25
      - 10.10.11.0/24
